--- a/adhd200_pubs.bib
+++ b/adhd200_pubs.bib
@@ -644,7 +644,7 @@ mendeley-tags = {Data Science}
 }
 @inproceedings{Nunez-Garcia2015,
 abstract = {Resting state fMRI is a powerful method of functional brain imaging, which can reveal information of functional connectivity between regions during rest. In this paper, we present a novel method, called Functional-Anatomical Discriminative Regions (FADR), for selecting a discriminative subset of functional-anatomical regions of the brain in order to characterize functional connectivity abnormalities in mental disorders. FADR integrates Independent Component Analysis with a sparse feature selection strategy, namely Elastic Net, in a supervised framework to extract a new sparse representation. In particular, ICA is used for obtaining group Resting State Networks and functional information is extracted from the subject-specific spatial maps. Anatomical information is incorporated to localize the discriminative regions. Thus, functional-anatomical information is combined in the new descriptor, which characterizes areas of different networks and carries discriminative power. Experimental results on the public database ADHD-200 validate the method being able to automatically extract discriminative areas and extending results from previous studies. The classification ability is evaluated showing that our method performs better than the average of the teams in the ADHD-200 Global Competition while giving relevant information about the disease by selecting the most discriminative regions at the same time.},
-author = {Nu{\~{n}}ez-Garcia, Marta and Simpraga, Sonja and Jurado, Maria Angeles and Garolera, Maite and Pueyo, Roser and Igual, Laura},
+author = {Nuñez-Garcia, Marta and Simpraga, Sonja and Jurado, Maria Angeles and Garolera, Maite and Pueyo, Roser and Igual, Laura},
 booktitle = {Machine Learning in Medical Imaging},
 doi = {10.1007/978-3-319-24888-2{\_}8},
 editor = {Zhou, Luping and Wang, Li and Wang, Qian and Shi, Yinghuan},
